--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,39 @@
-<div class="center">
-    <h1>Login</h1>
-    <form method="post">
-      <div class="txt_field">
-        <input type="text" required>
-        <span></span>
-        <label>Username</label>
+<div class="row center">
+  <div class="col-md-12">
+    <div class="alert alert-danger" *ngIf="error">
+{{error}}
+    </div>
+    <div *ngIf="isLoading" >
+      <p-progressSpinner class="spinner-position"></p-progressSpinner>
+
+    </div>
+    <form #authForm="ngForm" (ngSubmit)="onFormSubmit(authForm)">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" class="form-control" ngModel name="email" required email
+        #email="ngModel">
       </div>
-      <div class="txt_field">
-        <input type="password" required>
-        <span></span>
-        <label>Password</label>
+        <div class="help-text" *ngIf="email.touched && !email.valid">
+          <div>{{ getPasswordErrors(password) }}</div>
+
+        </div>
+     
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" ngModel name="password" required minlength="6" #password="ngModel">
+        <div class="help-text" *ngIf="password.touched && !password.valid">
+          <div *ngIf="password.errors.required">Password is required</div>
+          <div *ngIf="password.errors.minlength">Min 6 chracters</div>
+        </div>
       </div>
-      <div class="pass">Forgot Password?</div>
-      <input type="submit" value="Login">
-      <div class="signup_link">
-        Not a member? <a href="#">Signup</a>
+      <div class="mt-4">
+        <button type="submit" class="btn btn-primary" [disabled]="!authForm.valid">{{isLoginMode?
+          "Login":"signUp"}}</button> |
+        <button type="button" class="btn btn-primary" (click)="onSwitchMode()">Switch to {{isLoginMode?
+          "signUp":"Login"}}</button>
       </div>
     </form>
   </div>
+</div>
+
+
