--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,39 +1,48 @@
-<div class="row center">
-  <div class="col-md-12">
-    <div class="alert alert-danger" *ngIf="error">
-{{error}}
-    </div>
-    <div *ngIf="isLoading" >
-      <p-progressSpinner class="spinner-position"></p-progressSpinner>
+<p></p>
 
-    </div>
-    <form #authForm="ngForm" (ngSubmit)="onFormSubmit(authForm)">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" class="form-control" ngModel name="email" required email
-        #email="ngModel">
-      </div>
-        <div class="help-text" *ngIf="email.touched && !email.valid">
-          <div>{{ getPasswordErrors(password) }}</div>
-
-        </div>
+<div class="flex">
+  
+  <div class="flex-item-left" style="align-self: center">
+    <img src="assets/icon.png" height="400" class="mr-2">
+  </div>
+  <div class=" flex-item-right">
+   <p class="TITLE">CRAZY CRYPTO {{isLoginMode?
+    "LOGIN":"SIGNUP"}}</p>
+    <div class="col-md-12 row center">
      
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" ngModel name="password" required minlength="6" #password="ngModel">
-        <div class="help-text" *ngIf="password.touched && !password.valid">
-          <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minlength">Min 6 chracters</div>
+      <div class="alert alert-danger" *ngIf="error">
+        {{error}}
+      </div>
+      <div *ngIf="isLoading">
+        <p-progressSpinner class="spinner-position"></p-progressSpinner>
+  
+      </div>
+      <form #authForm="ngForm" (ngSubmit)="onFormSubmit(authForm)">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" class="form-control" ngModel name="email" required email #email="ngModel">
         </div>
-      </div>
-      <div class="mt-4">
-        <button type="submit" class="btn btn-primary" [disabled]="!authForm.valid">{{isLoginMode?
-          "Login":"signUp"}}</button> |
-        <button type="button" class="btn btn-primary" (click)="onSwitchMode()">Switch to {{isLoginMode?
-          "signUp":"Login"}}</button>
-      </div>
-    </form>
+        <div class="help-text" *ngIf="email.touched && !email.valid">
+          <div *ngIf="email.errors.required">Email is required</div>
+          <div *ngIf="email.errors.email">Invalid Email</div>
+  
+        </div>
+  
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" ngModel name="password" required minlength="6" #password="ngModel">
+          <div class="help-text" *ngIf="password.touched && !password.valid">
+            <div *ngIf="password.errors.required">Password is required</div>
+            <div *ngIf="password.errors.minlength">Min 6 chracters</div>
+          </div>
+        </div>
+        <div class="mt-4">
+          <button type="submit" class="btn btn-warning" [disabled]="!authForm.valid">{{isLoginMode?
+            "Login":"signUp"}}</button> |
+          <button type="button" class="btn btn-warning" (click)="onSwitchMode()">Switch to {{isLoginMode?
+            "signUp":"Login"}}</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
-
-
