--- a/src/app/tables/tables.component.css
+++ b/src/app/tables/tables.component.css
@@ -21,10 +21,11 @@
   .heading-position {
     width: 70px;
     height: 85px;
- 
+    color:#495057;
     top: 25%;
     left: 50%;
     margin-top: 10px;
     margin-left: 40%;
     z-index: 1;
+    font-size: 40px;
   }
