--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -1,23 +1,21 @@
 
 
 <div class="center">
-    <h1 class="heading-position">{{tab}}</h1>
+    <span class="heading-position">{{tab}}</span>
     <p-progressSpinner class="spinner-position" *ngIf="spinner"></p-progressSpinner>
-    <p-table *ngIf="!spinner" [value]="value"  [scrollable]="true"  [paginator]="true" [rows]="20" scrollHeight="300px" [resizableColumns]="true" styleClass="p-datatable-gridlines">
-        <ng-template pTemplate="header">
+    <p-table *ngIf="!spinner" [value]="value"  [scrollable]="true"  [paginator]="true" [rows]="20" scrollHeight="300px" [columns]="cols" [resizableColumns]="true" styleClass="p-datatable-gridlines">
+        <ng-template pTemplate="header" let-columns>
             <tr>
-                <th>Name</th>
-                <th>Rank</th>
-                <th>Price</th>
-                <th>Symbol</th>
+                <th *ngFor="let col of columns">
+                    {{col.header}}
+                </th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-value>
+        <ng-template pTemplate="body" let-rowData let-columns="columns">
             <tr>
-                <td>{{value.name}}</td>
-                <td>{{value.rank}}</td>
-                <td>{{'$'+value.priceUsd}}</td>
-                <td>{{value.symbol}}</td>
+                <td *ngFor="let col of columns">
+                    {{rowData[col.field]}}
+                </td>
             </tr>
         </ng-template>
     </p-table>
